[gd_scene load_steps=6 format=3 uid="uid://c4mxsp3hwb1t"]

[ext_resource type="PackedScene" uid="uid://nhswwg8agd86" path="res://Scene/station_base.tscn" id="1_vymbm"]
[ext_resource type="Script" uid="uid://6p7niu81427c" path="res://Script/Station_Source.gd" id="2_kt5cy"]
[ext_resource type="PackedScene" uid="uid://gj1uu8yyfpuo" path="res://Asset/Entity/NewSource.glb" id="3_6wiow"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vymbm"]
height = 20.945251
radius = 7.2475586

[sub_resource type="ViewportTexture" id="ViewportTexture_6wiow"]
viewport_path = NodePath("HealthBar/SubViewport")

[node name="StationBase" groups=["shootable"] instance=ExtResource("1_vymbm")]
collision_layer = 2
script = ExtResource("2_kt5cy")
max_health = 300.0
current_health = 300.0
effectZoneSize = 50
neededAreaToBuild = 3

[node name="NewSource" parent="Model" index="0" instance=ExtResource("3_6wiow")]
transform = Transform3D(2.005, 0, 0, 0, 2.005, 0, 0, 0, 2.005, 0, 0, 0)

[node name="CollisionShape3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.009369, 0)
shape = SubResource("CylinderShape3D_vymbm")

[node name="Sprite3D" parent="HealthBar" index="1"]
texture = SubResource("ViewportTexture_6wiow")

[connection signal="body_entered" from="EffectZone" to="." method="_on_effect_zone_body_entered"]
[connection signal="body_exited" from="EffectZone" to="." method="_on_effect_zone_body_exited"]
